# jindian-sales

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CLAUDE.md  FIX_FILTER_REPORT.md  FIX_REPORT.md  INCREMENTAL_MERGE_REPORT.md  README.md  V4_AUDIT_REPORT.md  commitlint.config.js  fix_installation_orders.py  husky-pre-commit.sh  husky-setup.sh  insert_dict_items.py  main.py  migrate_product_fields.py  pyproject.toml  requirements.txt  sales.db  seed_data.py  start.bat  test_order_flow.py  系统操作指引.md
.github/workflows/: ci.yml
.plan/: 3-DAY-SPRINT-PLAN.md  TASK-001_DEV.md  TASK-002_QA.md  TASK-003_DOC.md
app/: database.py  middleware.py  models.py  models.py.bak.20260421131708  schemas.py
app/api/: auth.py  customers.py  customers_v4.py  dashboard.py  dicts.py  employees.py  finance.py  followups.py  installation_orders.py  installations_v4.py  installer.py  inventory_v4.py  op_logs.py  orders.py  print_api.py  production_feedback.py  products.py  products_v4.py  purchase.py  purchase_orders.py  purchases_v4.py  reports.py  reports_v4.py  sms.py  track.py  warehouse.py  warehouses_v4.py
app/core/: config.py  response.py  status_engine.py
backend/: .env.example  Makefile  alembic.ini  main.py  pyproject.toml  requirements-test.txt  requirements.txt  resplit_po.py
backend/alembic/: env.py
backend/app/: database.py
backend/app/api/: deps.py
backend/app/api/v1/: after_sales.py  auth.py  customers.py  daily_report.py  dashboard.py  deposits.py  finance.py  installations.py  orders.py  processing.py  processing_orders.py  production.py  products.py  purchases.py  roles.py  system.py  warehouses.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  response.py  security.py
backend/app/domain/: __init__.py  after_sale.py  auth.py  base.py  customer.py  deposit.py  finance.py  installation.py  log.py  order.py  order_fee.py  processing.py  processing_order.py  product.py  production.py  purchase.py  role.py  system.py  warehouse.py
backend/app/schemas/: __init__.py  after_sale.py  auth.py  common.py  customer.py  daily_report.py  deposit.py  finance.py  installation.py  order.py  order_fee.py  processing.py  processing_order.py  product.py  production.py  purchase.py  role.py  warehouse.py
backend/app/services/: status_engine.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_order_status.py  test_placeholder.py  test_products.py  test_purchase_flow.py
backend/tests/integration/: README.md  conftest.py  test_full_chain.py
docs/: API-FORMAT.md  BUG-MEMO.md  BUG_FIX_PROTOCOL.md  CHANGELOG.md  CODE_STANDARDS.md  FILTER_FIX_V2.md  FIX_REPORT.md  R1_Bug修复记录.md  R1_测试报告.md  R1_测试用例.md  TEST_REPORT.md  V3.0_API文档.md  V3.0_R1_API文档.md  V3.0_系统设计.md  V3.0窗帘行业需求文档.md  完整开发方案.md  窗帘销售系统_数据库设计.md  窗帘销售系统_概要设计.md  竞品与行业参考材料.md  系统设计文档.md  进销存开发学习指南.md  金典软装_窗帘销售系统_需求规格说明书.md  需求全景梳理.md  需求说明书.md
docs/v4.0/: API_DESIGN.md  ARCHITECTURE.md  DATABASE.md  DEPLOY.md  FRONTEND.md  OVERVIEW.md  TODO.md
frontend/: .eslintrc.cjs  .prettierrc  Makefile  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: placeholder.spec.js
frontend/src/: App.vue  main.js
migrations/: add_product_cf.py  add_product_remark.sql  v3.0_add_tables.sql  v3_add_columns.py  v4_phase1.py
scripts/: pattern_checker.py  setup_quality_env.sh
static/: index.html  installer.html  track.html
static/js/: 00-base.js  01-api.js  03-orders.js  04-purchase.js  05-product.js  06-customer.js  08-home.js  (+8 more)
tests/: test_api.py  test_auth.py  test_customers.py  test_installation.py  test_orders.py
(+48 files in other folders)
